--- a/package.json
+++ b/package.json
@@ -1,26 +1,21 @@
 {
-  "name": "around-react",
+  "name": "around_the_us_with_react",
   "version": "0.1.0",
-  "homepage": "https://{benyossef27}.github.io/{around-react}",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "minimist": "^1.2.6",
-    "package": "^1.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -39,9 +34,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh": "^2.8.9",
-    "gh-pages": "^3.2.3"
   }
 }
